--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="google-site-verification" content="I94P83dWooBGZ5Dfrd6LsDaDRA8kFYtG0ErM5H-7Itg" />
    
 
    <!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2123362014472223"
